# composio-toolkit-assessment

./: .contributors-refresh  .gitignore  .mailmap  .vercelignore  Dockerfile  PRD.md  README.md  agent.ts  agent_composio.py  agent_verify.py  docker-compose.yml  generate_site.py  index.html  inject_real_data.py  package-lock.json  package.json  pyproject.toml  research_agent.py  test_composio.py  test_gemini2.py  test_kimchi3.py  vercel.json  verify.py
.codex/: hooks.json
.github/workflows/: pipeline.yml
agents/: agentic.py  browser_verifier.py  supervisor.py
backend/: api.py  composio_client.py  database.py  models.py
cli/: main.py
composio_research.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
data/: research.db  research.json  verification.json
frontend/: report.html
frontend/templates/: report.html.j2
intelligence/: agentic.py  browser_verifier.py  confidence.py  evidence.py  human_review.py  patterns.py  supervisor.py
reports/: html_report.py
research/: __init__.py  app_list.py  dataset.py  researcher.py
services/: api.py  composio_client.py  config.py  database.py
site/: index.html
tests/: test_basic.py  test_mcp.py
verification/: verifier.py
