[project]
name = "composio-research"
version = "1.0.0"
description = "Composio Product Research Platform — Multi-agent app research pipeline"
requires-python = ">=3.12"
dependencies = [
    "typer>=0.12",
    "rich>=13.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "jinja2>=3.0",
    "pandas>=2.0",
    "composio>=0.18",
    "httpx>=0.27",
    "fastapi>=0.139.2",
    "uvicorn>=0.51.0",
    "pytest>=9.1.1",
    "openai>=1.12.0",
    "composio-openai>=0.1.0",
    "google-generativeai>=0.8.6",
    "composio-gemini>=0.18.0",
    "composio-langchain>=0.18.0",
    "langchain-google-genai>=4.2.7",
    "langchain-openai>=1.3.5",
    "mcp>=1.28.1",
    "browser-use>=0.5.9",
    "playwright>=1.61.0",
    "langchain-mcp-adapters>=0.3.0",
]

[project.scripts]
composio-research = "cli.main:entry_point"

[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["services", "intelligence", "research", "evaluation", "cli", "reports"]
